<resources>
    <string name="app_name">BitTorrent Client</string>
    <string name="torrents">Torrents</string>
    <string name="downloading">Downloading</string>
    <string name="seeding">Seeding</string>
    <string name="completed">Completed</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="settings">Settings</string>
    <string name="eta">ETA: %s</string>
    <string name="torrent_file_chooser">Choose .torrent file</string>
    <string name="no_file_manager_toast">Error. Seems like there is no file manager on this device :(</string>
    <string name="parsing_file_error">Error while parsing file :(</string>
    <string name="write_permission_error">I cannot download without write permission :(</string>
    <string name="read_permission_error">I cannot start download without read permission :(</string>
    <string name="notification_title">BitTorrent Client</string>
    <string name="notification_text">Your loadings are being processed!</string>
</resources>
