<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <Button
            style="@style/NavItem"
            android:text="@string/torrents" />

        <Button
            style="@style/NavSubItem"
            android:drawableLeft="@drawable/ic_arrow_down"
            android:text="@string/downloading" />

        <Button
            style="@style/NavSubItem"
            android:drawableLeft="@drawable/ic_arrow_up"
            android:text="@string/seeding" />

        <Button
            style="@style/NavSubItem"
            android:drawableLeft="@drawable/ic_completed"
            android:text="@string/completed" />

        <Button
            style="@style/NavSubItem"
            android:drawableLeft="@drawable/ic_resume"
            android:text="@string/active" />

        <Button
            style="@style/NavSubItem"
            android:drawableLeft="@drawable/ic_pause"
            android:text="@string/inactive" />
    </LinearLayout>

    <Button
        style="@style/NavItem"
        android:drawableLeft="@drawable/ic_settings"
        android:text="@string/settings"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/nav_night_mode" />

    <ImageButton
        android:background="?selectableItemBackground"
        android:id="@+id/nav_night_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:padding="16dp"
        android:src="@drawable/ic_moon" />
</RelativeLayout>

